# pygame_cards

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: api.rst  conf.py  developping.rst  examples.rst  existing_sets.rst  index.rst  tokens.rst  tutorial.rst
examples/: README.md  classic_emojis_cards.py  clondike.py  create_game_from_script.py  solitaire.py  test_problem_libcairo_not_found.py
examples/networking_rockpaperscisors/: README.md  client.py  content.py  pg_client.py  server.py
examples/tutorial/: first_game.py  minion_card.py  minion_card_graphics.py  minion_set.py
examples/tutorial/images/: README.md
others/: test_problem_libcairo_not_found.py
pygame_cards/: __init__.py  abstract.py  back.py  board.py  classics.py  constants.py  deck.py  defaults.py  effects.py  events.py  game.py  hands.py  manager.py  set.py  tokens.py  utils.py
pygame_cards/images/: readme.md
pygame_cards/io/: __init__.py  __main__.py  json.py  utils.py
pygame_cards/server/: __init__.py  client.py  events.py  host.py  json_encoding.py  player.py
tests/: test_abstract.py  test_cardset.py  test_events.py
