[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pygame_cards"
version = "0.0.1"
authors = [
  { name="Lionel42", email="lionel@sciencegames.ch" },
]
description = "Framework for simple cards games powered by Pygame"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ScienceGamez/pygame_cards"
"Bug Tracker" = "https://github.com/ScienceGamez/pygame_cards/issues"
