[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pygame_cards"
version = "0.1.3"
authors = [
  { name="Lionel42", email="lionel@sciencegames.ch" },
]
description = "Framework for simple cards games powered by Pygame"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame",
    "pygame_emojis",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/ScienceGamez/pygame_cards"
"Bug Tracker" = "https://github.com/ScienceGamez/pygame_cards/issues"
"Documentation" = "https://pygame-cards.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "sphinx",
    "furo"
]

[tool.setuptools.package-data]
"pygame_cards.images" = ["*.png"]
